--- a/FitnessAssistant/Windows/RegistrationWindow.xaml
+++ b/FitnessAssistant/Windows/RegistrationWindow.xaml
@@ -6,25 +6,213 @@
         xmlns:local="clr-namespace:FitnessAssistant.Windows"
         mc:Ignorable="d"
         Title="Registration" 
-        Height="450" 
-        Width="800"
-        WindowStartupLocation="CenterScreen">
+        Height="600" 
+        Width="1024"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="None" 
+        Background="#6495ED"
+        ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
+            <RowDefinition Height="3*"/>
             <RowDefinition Height="2*"/>
             <RowDefinition Height="2*"/>
             <RowDefinition Height="2*"/>
             <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
+
+        <Border Background="White"
+                Grid.ColumnSpan="3"
+                Grid.RowSpan="100"
+                Margin="20"
+                CornerRadius="15"
+                >
+        </Border>
+
+        <Button x:Name="btnClose"
+                Grid.Column="0"
+                Grid.Row="0"
+                Grid.ColumnSpan="3"
+                Grid.RowSpan="10"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Width="30"
+                Height="30"
+                Content="x"
+                FontSize="25"
+                Background="{x:Null}"
+                BorderThickness="0"
+                Click="btnClose_Click">
+        </Button>
+
+        <TextBlock Text="Регистрация нового пользователя"
+                   Grid.Column="0"
+                   Grid.Row="1"
+                   Grid.ColumnSpan="3"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Top"
+                   FontSize="30"
+                   Margin="20 0"
+                   FontWeight="Bold"/>
+        <!-- Левый столбец -->
+        <TextBlock Text="Имя"
+                   Grid.Column="0"
+                   Grid.Row="2"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="20 0"/>
+
+        <TextBlock Text="Логин"
+                   Grid.Column="0"
+                   Grid.Row="3"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="20 0"/>
+
+        <TextBlock Text="Пароль"
+                   Grid.Column="0"
+                   Grid.Row="4"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="20 0"/>
+
+        <TextBlock Text="Пол"
+                   Grid.Column="0"
+                   Grid.Row="5"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="20 0"/>
+
+        <TextBlock Text="Возраст"
+                   Grid.Column="0"
+                   Grid.Row="6"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="20 0"/>
+
+        <TextBlock Text="Вес"
+                   Grid.Column="0"
+                   Grid.Row="7"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="20 0"/>
+
+        <TextBlock Text="Рост"
+                   Grid.Column="0"
+                   Grid.Row="8"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="20 0"/>
+
+        <Button Content="Зарегистрироваться" 
+                Grid.Column="0"
+                Grid.Row="10"
+                Grid.ColumnSpan="3"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="20"
+                Width="200"
+                Height="40"/>
+
+        <!-- Средний столбец -->
+
+        <TextBox x:Name="txtName" 
+                 Grid.Column="1"
+                 Grid.Row="2"
+                 Margin="20 7 70 7"
+                 FontSize="20"
+                 BorderBrush="LightGray"/>
+
+        <TextBox x:Name="txtLogin" 
+                 Grid.Column="1"
+                 Grid.Row="3"
+                 Margin="20 7 70 7"
+                 FontSize="20"
+                 BorderBrush="LightGray"/>
+
+        <TextBox x:Name="txtPassword" 
+                 Grid.Column="1"
+                 Grid.Row="4"
+                 Margin="20 7 70 7"
+                 FontSize="20"
+                 BorderBrush="LightGray"/>
+        
+        <ComboBox x:Name="cmbGender" 
+                 Grid.Column="1"
+                 Grid.Row="5"
+                 Margin="20 7 70 7"
+                 FontSize="20"
+                 BorderBrush="LightGray"/>
+
+        <TextBox x:Name="txtAge" 
+                 Grid.Column="1"
+                 Grid.Row="6"
+                 Margin="20 7 70 7"
+                 FontSize="20"
+                 BorderBrush="LightGray"/>
+
+        <TextBox x:Name="txtWeight" 
+                 Grid.Column="1"
+                 Grid.Row="7"
+                 Margin="20 7 70 7"
+                 FontSize="20"
+                 BorderBrush="LightGray"/>
+        <TextBox x:Name="txtHeight" 
+                 Grid.Column="1"
+                 Grid.Row="8"
+                 Margin="20 7 70 7"
+                 FontSize="20"
+                 BorderBrush="LightGray"/>
+        
+        <!-- Правый столбец -->
+        
+        <Border Grid.Row="2"
+                Grid.Column="2"
+                Grid.RowSpan="4"
+                Padding="5"
+                Margin="10 0 50 0"
+                BorderThickness="1"
+                BorderBrush="Gray">
+            <Image x:Name="imgPhotoUser"/>
+        </Border>
+        
+        <Button Content="Выбрать фото" 
+                Grid.Column="2"
+                Grid.Row="6"
+                Grid.ColumnSpan="3"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="20"
+                Width="200"
+                Height="40"/>
+
+
+
+
     </Grid>
 </Window>
 <!--
-    Окно регистрации. Вводятся Имя, Логин, Пароль, Пол, Возраст, Вес,
-Рост. Кнопка Зарегистрироваться и Отмена, которая возвращает
+    
+Кнопка Зарегистрироваться и Отмена, которая возвращает
 пользователя на окно авторизации.
     -->
