--- a/FitnessAssistant/Windows/UserWindow.xaml
+++ b/FitnessAssistant/Windows/UserWindow.xaml
@@ -8,9 +8,144 @@
         Title="UserWindow" Height="450" Width="800"
         WindowStartupLocation="CenterScreen">
     <Grid>
-        <TextBlock Text="Все данные пользователя"
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="8*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Ваши данные"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
-                   FontSize="50"/>
+                   FontSize="30"/>
+
+        <TextBlock x:Name="tbUserData" Text="Пользователь: "
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Right"
+                   FontSize="20"
+                   Margin="15 0"/>
+
+        <Grid Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+
+            <!--Левый столбец -->
+
+            <TextBlock Text="Имя"
+                   Grid.Column="0"
+                   Grid.Row="1"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="20 0"/>
+
+            <TextBlock Text="Пол"
+                   Grid.Column="0"
+                   Grid.Row="2"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="20 0"/>
+
+            <TextBlock Text="Возраст"
+                   Grid.Column="0"
+                   Grid.Row="3"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="20 0"/>
+
+            <TextBlock Text="Вес"
+                   Grid.Column="0"
+                   Grid.Row="4"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="20 0"/>
+
+            <TextBlock Text="Рост"
+                   Grid.Column="0"
+                   Grid.Row="5"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="20 0"/>
+
+            <TextBlock x:Name="tbBMI" 
+                       Grid.Column="0"
+                       Grid.Row="6"
+                       Grid.ColumnSpan="3"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       FontSize="20"
+                       Margin="20 0"
+                       Text="Индекс массы вашего тела равен: "
+                       TextWrapping="Wrap"/>
+            <!--Правый столбец -->
+            <TextBlock x:Name="tbName"
+                       Text="Имя"
+                       Grid.Column="1"
+                       Grid.Row="1"
+                       HorizontalAlignment="Left"
+                       VerticalAlignment="Center"
+                       FontSize="20"
+                       Margin="20 0"/>
+
+            <TextBlock x:Name="tbGender"
+                       Text="Пол"
+                       Grid.Column="1"
+                       Grid.Row="2"
+                       HorizontalAlignment="Left"
+                       VerticalAlignment="Center"
+                       FontSize="20"
+                       Margin="20 0"/>
+
+            <TextBlock x:Name="tbAge" Text="Возраст"
+                       Grid.Column="1"
+                       Grid.Row="3"
+                       HorizontalAlignment="Left"
+                       VerticalAlignment="Center"
+                       FontSize="20"
+                       Margin="20 0"/>
+
+            <TextBlock x:Name="tbWeight"
+                       Text="Вес"
+                       Grid.Column="1"
+                       Grid.Row="4"
+                       HorizontalAlignment="Left"
+                       VerticalAlignment="Center"
+                       FontSize="20"
+                       Margin="20 0"/>
+
+            <TextBlock x:Name="tbHeight" 
+                       Text="Рост"
+                       Grid.Column="1"
+                       Grid.Row="5"
+                       HorizontalAlignment="Left"
+                       VerticalAlignment="Center"
+                       FontSize="20"
+                       Margin="20 0"/>
+            
+            <!-- Изображение -->
+            <Image x:Name="photoUser"
+                   Grid.Row="1"
+                   Grid.Column="2"
+                   Grid.RowSpan="4"
+                   Width="150"
+                   Height="175"/>
+        </Grid>
     </Grid>
 </Window>
